<resources>
    <string name="app_name">Restaurant_Poli</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Gourmet App</string>
    <string name="nav_header_subtitle">contacto@gourmetapp.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Pato Asado</string>
    <string name="menu_gallery">Fotos</string>
    <string name="menu_slideshow">Videos</string>
    <string name="menu_contacto">Contacto</string>
    <string name="nav_header_menu">Nuestro Menu</string>
    <string name="nav_header_sub_menu">Delicias Gourmet</string>
    <string name="nav_header_videos">Conoce nuestro restaurante</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>