<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_gallery">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.restaurant_poli.ui.productDetail.ProductDetailFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_product_detail" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.restaurant_poli.ui.menu.MenuFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_menu" >
        <action
            android:id="@+id/action_nav_gallery_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.restaurant_poli.ui.video.VideoFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_video" />
    <fragment
        android:id="@+id/nav_contact"
        android:name="com.example.restaurant_poli.ui.contacto.contactoFragment"
        android:label="@string/menu_contacto"
        tools:layout="@layout/fragment_contacto" />
</navigation>