<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbarAlwaysDrawVerticalTrack="true"
    tools:context=".ui.menu.MenuFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:orientation="vertical"
        android:padding="10dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="47dp"
                android:layout_height="match_parent"
                android:contentDescription="@string/nav_header_desc"
                android:paddingTop="@dimen/nav_header_vertical_spacing"
                app:srcCompat="@drawable/food_and_restaurant_1" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="166dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:paddingTop="@dimen/nav_header_vertical_spacing"
                    android:text="@string/nav_header_menu"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/white"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/nav_header_sub_menu"
                    android:textColor="@color/white" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="172dp"
                android:layout_height="184dp"
                android:layout_margin="10dp"
                android:background="@color/black"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="101dp"
                    app:cardCornerRadius="5dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        app:srcCompat="@drawable/_099_1"/>
                </androidx.cardview.widget.CardView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Desayuno Fit"
                    android:textColor="@color/white" />

                <TextView
                    android:layout_width="127dp"
                    android:layout_height="65dp"
                    android:text="Pan cakes con hojuelas y miel"
                    android:textColor="@color/white" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="172dp"
                android:layout_height="184dp"
                android:layout_margin="5dp"
                android:background="@color/black"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="101dp"
                    app:cardCornerRadius="5dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        app:srcCompat="@drawable/_136_1" />
                </androidx.cardview.widget.CardView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Postre Rosa"
                    android:textColor="@color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Delicioso poste de mora con arequipe"
                    android:textColor="@color/white" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="172dp"
                android:layout_height="184dp"
                android:layout_margin="10dp"
                android:background="@color/black"
                android:orientation="vertical" >

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="101dp"
                    app:cardCornerRadius="5dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        app:srcCompat="@drawable/_099_1" />
                </androidx.cardview.widget.CardView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Desayuno Fit"
                    android:textColor="@color/white" />

                <TextView
                    android:layout_width="127dp"
                    android:layout_height="65dp"
                    android:text="Pan cakes con hojuelas y miel"
                    android:textColor="@color/white" />

            </LinearLayout>



            <LinearLayout
                android:layout_width="172dp"
                android:layout_height="184dp"
                android:layout_margin="5dp"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="101dp"
                    app:cardCornerRadius="5dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        app:srcCompat="@drawable/_148517045_1" />
                </androidx.cardview.widget.CardView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Pato al horno"
                    android:textColor="@color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Plato fuerte como pato al horno"
                    android:textColor="@color/white" />

            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="172dp"
                android:layout_height="184dp"
                android:layout_margin="10dp"
                android:background="@color/black"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="101dp"
                    app:cardCornerRadius="5dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        app:srcCompat="@drawable/_099_1" />
                </androidx.cardview.widget.CardView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Desayuno Fit"
                    android:textColor="@color/white" />

                <TextView
                    android:layout_width="127dp"
                    android:layout_height="65dp"
                    android:text="Pan cakes con hojuelas y miel"
                    android:textColor="@color/white" />

            </LinearLayout>



            <LinearLayout
                android:layout_width="172dp"
                android:layout_height="184dp"
                android:layout_margin="5dp"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="101dp"
                    app:cardCornerRadius="5dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        app:srcCompat="@drawable/_148517045_1" />
                </androidx.cardview.widget.CardView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Pato al horno"
                    android:textColor="@color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Plato fuerte como pato al horno"
                    android:textColor="@color/white" />

            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="172dp"
                android:layout_height="184dp"
                android:layout_margin="10dp"
                android:background="@color/black"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="101dp"
                    app:cardCornerRadius="5dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        app:srcCompat="@drawable/_099_1" />
                </androidx.cardview.widget.CardView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Desayuno Fit"
                    android:textColor="@color/white" />

                <TextView
                    android:layout_width="127dp"
                    android:layout_height="65dp"
                    android:text="Pan cakes con hojuelas y miel"
                    android:textColor="@color/white" />

            </LinearLayout>



            <LinearLayout
                android:layout_width="172dp"
                android:layout_height="184dp"
                android:layout_margin="5dp"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="101dp"
                    app:cardCornerRadius="5dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        app:srcCompat="@drawable/_148517045_1" />
                </androidx.cardview.widget.CardView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Pato al horno"
                    android:textColor="@color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Plato fuerte como pato al horno"
                    android:textColor="@color/white" />

            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="172dp"
                android:layout_height="184dp"
                android:layout_margin="5dp"
                android:background="@color/black"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="101dp"
                    app:cardCornerRadius="5dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        app:srcCompat="@drawable/_099_1" />
                </androidx.cardview.widget.CardView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Desayuno Fit"
                    android:textColor="@color/white" />

                <TextView
                    android:layout_width="127dp"
                    android:layout_height="65dp"
                    android:text="Pan cakes con hojuelas y miel"
                    android:textColor="@color/white" />

            </LinearLayout>



            <LinearLayout
                android:layout_width="172dp"
                android:layout_height="184dp"
                android:layout_margin="5dp"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="101dp"
                    app:cardCornerRadius="5dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        app:srcCompat="@drawable/_148517045_1" />
                </androidx.cardview.widget.CardView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Pato al horno"
                    android:textColor="@color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Plato fuerte como pato al horno"
                    android:textColor="@color/white" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>